--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -1,7 +1,10 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
 
-# 原始档案 from 2019-12-2
+
+#####################
+# PART ONE
+# Origin from 2019-12-2
 # docker pull jupyter/base-notebook:cd158647fb94 
 
 # Ubuntu 18.04 (bionic) from 2019-10-29
@@ -135,3 +138,50 @@ RUN fix-permissions /etc/jupyter/
 
 # Switch back to jovyan to avoid accidental container runs as root
 USER $NB_UID
+
+
+#####################
+# PART TWO
+# Origin from 2019-12-2
+# docker pull jupyter/minimal-notebook:7a0c7325e470
+
+USER root
+
+# Install all OS dependencies for fully functional notebook server
+RUN apt-get update && apt-get install -yq --no-install-recommends \
+    build-essential \
+    emacs \
+    git \
+    inkscape \
+    jed \
+    libsm6 \
+    libxext-dev \
+    libxrender1 \
+    lmodern \
+    netcat \
+    pandoc \
+    python-dev \
+    texlive-fonts-extra \
+    texlive-fonts-recommended \
+    texlive-generic-recommended \
+    texlive-latex-base \
+    texlive-latex-extra \
+    texlive-xetex \
+    tzdata \
+    unzip \
+    nano \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Switch back to jovyan to avoid accidental container runs as root
+USER $NB_UID
+
+
+#####################
+# PART THREE
+# Install nbnbgitpuller and nbresuse 
+# Build in TLJH
+
+RUN pip install nbgitpuller && \
+    jupyter serverextension enable --py nbgitpuller --sys-prefix
+
+RUN pip install nbresuse
